--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,9 +9,10 @@ services:
     entrypoint: dockerize -wait tcp://db:3306 -timeout 20s docker-entrypoint.sh node index.js
     volumes: 
       - ./node:/usr/src/app
+      - /usr/src/app/node_modules
     tty: true
-    ports: 
-      - "3000:3000"
+    #ports: 
+    #  - "3000:3000"
     depends_on: 
       - db
     networks: 
