--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -9,6 +9,17 @@ RUN wget --no-check-certificate https://github.com/jwilder/dockerize/releases/do
     && tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
     && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
 
+RUN useradd --user-group --create-home --shell /bin/false app &&\
+  npm install --global npm@3.7.5
+
+COPY . .
+
+RUN chown -R app:app .
+
+USER app
+
+RUN npm install
+
 EXPOSE 3000
 
-#CMD ["node","index.js"]
+CMD ["node","index.js"]
